Added a separate reset button. Changed the color of the counter line to black. Added optional URL parameters to position the model.

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div id="modelDiv"></div>
-    <button id="button"><i id="buttonIcon" class="material-icons">play_arrow</i></button>
+    <button id="playPauseButton"><i id="playPauseButtonIcon" class="material-icons">play_arrow</i></button>
+    <button id="resetButton"><i id="resetButtonIcon" class="material-icons">replay</i></button>
     <script src="bundle.js"></script>
   </body>
 </html>
